[gd_scene load_steps=42 format=3 uid="uid://cuk0xlukc37h7"]

[ext_resource type="Script" uid="uid://ce04lkinsono8" path="res://Code/Scenes/UI/Cards/fossil_card.gd" id="1_0a3ji"]
[ext_resource type="Resource" uid="uid://uaq7je501sbg" path="res://Resources/Cards/2 ex Sandstorm/SS90ClawFossil.tres" id="2_2hmg5"]
[ext_resource type="PackedScene" uid="uid://dmhjt2wuanymf" path="res://Scenes/UI/UIComponents/minimize_button.tscn" id="3_ovrbb"]
[ext_resource type="PackedScene" uid="uid://c5d081uywglg" path="res://Scenes/UI/UIComponents/close_button.tscn" id="4_13hoc"]
[ext_resource type="StyleBox" uid="uid://bvesf3hjv2bsl" path="res://Themes/StyleBoxes/GBADragBox.tres" id="5_60brj"]
[ext_resource type="Theme" uid="uid://bfw6ylcttychc" path="res://Themes/Themes/AverageButton.tres" id="6_2xrpu"]
[ext_resource type="PackedScene" uid="uid://bs3ila6cpt8n1" path="res://Scenes/UI/UIComponents/types.tscn" id="7_0a3ji"]
[ext_resource type="Texture2D" uid="uid://b4uymubvo04qp" path="res://Art/Cards/4 ex Team Magma vs Team Aqua/37.jpg" id="7_lqw0i"]
[ext_resource type="Texture2D" uid="uid://ciyynt0iw46k5" path="res://Art/Rarities/31px-Rarity_Common.png" id="9_478ut"]
[ext_resource type="PackedScene" uid="uid://dutm4vrspqfgn" path="res://Scenes/UI/Lists/attack_scroll_box_copy.tscn" id="10_2hmg5"]
[ext_resource type="Texture2D" uid="uid://blfwsqqtrqe8v" path="res://Art/Rarities/31px-Rarity_Uncommon.png" id="10_flt4n"]
[ext_resource type="Texture2D" uid="uid://bir0keyl58pst" path="res://Art/Rarities/31px-Rarity_Rare.png" id="11_wn7x8"]
[ext_resource type="Texture2D" uid="uid://be2sag665selj" path="res://Art/Rarities/Rarity_Rare_Holo.png" id="12_gajpu"]
[ext_resource type="Texture2D" uid="uid://dldh83yhhvvs2" path="res://Art/Rarities/Rarity_Rare_Holo_ex.png" id="13_mulxs"]
[ext_resource type="Texture2D" uid="uid://dfh4btp104a45" path="res://Art/Rarities/Rarity_Rare_Secret.png" id="14_nckev"]
[ext_resource type="Texture2D" uid="uid://cnsmaebpgm086" path="res://Art/Rarities/Rarity_Ultra-Rare_Rare.png" id="15_cb5gi"]
[ext_resource type="Texture2D" uid="uid://dx7wnthhhm80w" path="res://Art/Rarities/30px-SetSymbolPromo.png" id="16_k2ny7"]
[ext_resource type="Texture2D" uid="uid://ddc506ji0ciqq" path="res://Art/ExpansionIcons/40px-SetSymbolRuby_and_Sapphire.png" id="17_hr2nq"]
[ext_resource type="Texture2D" uid="uid://db2fvownqtey" path="res://Art/ExpansionIcons/40px-SetSymbolSandstorm.png" id="18_kkm5t"]
[ext_resource type="Texture2D" uid="uid://c2jvdeequ414n" path="res://Art/ExpansionIcons/40px-SetSymbolDragon.png" id="19_nfhoa"]
[ext_resource type="Texture2D" uid="uid://bq2t54jnbrdxo" path="res://Art/ExpansionIcons/SetSymbolTeam_Magma_vs_Team_Aqua.png" id="20_wi2ea"]
[ext_resource type="Texture2D" uid="uid://j1nc5rmbmtof" path="res://Art/ExpansionIcons/SetSymbolHidden_Legends.png" id="21_n8elh"]
[ext_resource type="Texture2D" uid="uid://b6needgmeexy4" path="res://Art/ExpansionIcons/40px-SetSymbolFireRed_and_LeafGreen.png" id="22_thy0j"]
[ext_resource type="Texture2D" uid="uid://cysbdsdk41l70" path="res://Art/ExpansionIcons/40px-SetSymbolTeam_Rocket_Returns.png" id="23_ci2jk"]
[ext_resource type="Texture2D" uid="uid://doaf0r45tfeuk" path="res://Art/ExpansionIcons/40px-SetSymbolDeoxys.png" id="24_eapo5"]
[ext_resource type="Texture2D" uid="uid://87kxw7qy5xnf" path="res://Art/ExpansionIcons/40px-SetSymbolEmerald.png" id="25_3k3o2"]
[ext_resource type="Texture2D" uid="uid://c7gf58mjxbggi" path="res://Art/ExpansionIcons/40px-SetSymbolUnseen_Forces.png" id="26_cf4eo"]
[ext_resource type="Texture2D" uid="uid://cxp000m648ge8" path="res://Art/ExpansionIcons/40px-SetSymbolDelta_Species.png" id="27_p87ll"]
[ext_resource type="Texture2D" uid="uid://dpblqw53nvq1t" path="res://Art/ExpansionIcons/40px-SetSymbolLegend_Maker.png" id="28_s1pco"]
[ext_resource type="Texture2D" uid="uid://by7tbpb4iejsd" path="res://Art/ExpansionIcons/40px-SetSymbolHolon_Phantoms.png" id="29_ol86j"]
[ext_resource type="Texture2D" uid="uid://coghsgxhlxqmb" path="res://Art/ExpansionIcons/40px-SetSymbolCrystal_Guardians.png" id="30_jtbkc"]
[ext_resource type="Texture2D" uid="uid://buoaylg1cab2a" path="res://Art/ExpansionIcons/40px-SetSymbolDragon_Frontiers.png" id="31_14fch"]
[ext_resource type="Texture2D" uid="uid://dmxe8sf6hdnnc" path="res://Art/ExpansionIcons/40px-SetSymbolPower_Keepers.png" id="32_1p8mx"]
[ext_resource type="Texture2D" uid="uid://duuiqd63epsex" path="res://Art/ExpansionIcons/SetSymbolPOP_Series_1.png" id="33_fd1ra"]
[ext_resource type="Texture2D" uid="uid://edeej3yipdeo" path="res://Art/ExpansionIcons/SetSymbolPOP_Series_2.png" id="34_woxsh"]
[ext_resource type="Texture2D" uid="uid://be1nfp0g24sdm" path="res://Art/ExpansionIcons/SetSymbolPOP_Series_3.png" id="35_jhidd"]
[ext_resource type="Texture2D" uid="uid://bfsbptu51xrnn" path="res://Art/ExpansionIcons/45px-SetSymbolPOP_Series_4.png" id="36_ba51r"]
[ext_resource type="Texture2D" uid="uid://cu8egxwxamvxw" path="res://Art/ExpansionIcons/45px-SetSymbolPOP_Series_5.png" id="37_1amd7"]
[ext_resource type="PackedScene" uid="uid://cmmds4boaksl7" path="res://Scenes/UI/UIComponents/movable.tscn" id="38_jn0c6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wt4wi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x7o3x"]

[node name="FossilCard" type="Control"]
layout_mode = 3
anchor_right = 0.409
anchor_bottom = 0.362
offset_right = 0.279999
offset_bottom = 0.359985
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0a3ji")
card = ExtResource("2_2hmg5")
checking = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="MinimizeButton" parent="VBoxContainer/HBoxContainer" node_paths=PackedStringArray("shrinkNodes", "hideNodes") instance=ExtResource("3_ovrbb")]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
shrinkNodes = [NodePath("../../PanelContainer")]
hideNodes = [NodePath("../../PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/Description"), NodePath("../../PanelContainer/VBoxContainer/Other")]

[node name="CloseButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource("4_13hoc")]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("6_2xrpu")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("5_60brj")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MainInfromation" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MainInfromation" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/MainInfromation"]
layout_mode = 2

[node name="Name" type="RichTextLabel" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/MainInfromation/MainInfromation"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Mysterious Fossil"
fit_content = true

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/MainInfromation/MainInfromation"]
layout_mode = 2

[node name="Extra" type="RichTextLabel" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/MainInfromation/MainInfromation"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Fossil"
fit_content = true
horizontal_alignment = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/MainInfromation/MainInfromation"]
layout_mode = 2

[node name="HP" type="RichTextLabel" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/MainInfromation/MainInfromation"]
unique_name_in_owner = true
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "HP: 200"
fit_content = true

[node name="DefaultType" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/MainInfromation/MainInfromation" instance=ExtResource("7_0a3ji")]
unique_name_in_owner = true
layout_mode = 2

[node name="Art" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Art" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/Art"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.992157)
custom_minimum_size = Vector2(189, 114)
layout_mode = 2
texture = ExtResource("7_lqw0i")
expand_mode = 5
stretch_mode = 5

[node name="Description" type="MarginContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="EffectBox" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/Description"]
layout_mode = 2

[node name="EffectV" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/Description/EffectBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="ClassText" type="RichTextLabel" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/Description/EffectBox/EffectV"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/italics_font_size = 10
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "Illustrator:"
fit_content = true

[node name="Effect" type="RichTextLabel" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/Description/EffectBox/EffectV"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Illustrator:"
fit_content = true

[node name="Movable" parent="VBoxContainer/PanelContainer/VBoxContainer/PanelContainer" node_paths=PackedStringArray("dragging_node", "based_on") instance=ExtResource("38_jn0c6")]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"DragButton"
dragging_node = NodePath("../../../../..")
based_on = NodePath("../../..")

[node name="Attacks" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Attacks" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/Attacks"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/Attacks/Attacks"]
layout_mode = 2

[node name="AttackScrollBox" parent="VBoxContainer/PanelContainer/VBoxContainer/Attacks/Attacks/MarginContainer" instance=ExtResource("10_2hmg5")]
unique_name_in_owner = true
layout_mode = 2

[node name="Other" type="MarginContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/Other"]
layout_mode = 2
theme_type_variation = &"DeepPannel"

[node name="OtherProperties" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 2

[node name="Illustrator" type="RichTextLabel" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
fit_content = true

[node name="Number" type="RichTextLabel" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 8
text = "100/100"
fit_content = true

[node name="Rarity" type="TabContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxEmpty_wt4wi")
current_tab = 0
tabs_visible = false
metadata/_edit_group_ = true

[node name="Common" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("9_478ut")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 0

[node name="Uncommon" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
visible = false
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("10_flt4n")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 1

[node name="Rare" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("11_wn7x8")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 2

[node name="Holo Rare" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("12_gajpu")
expand_mode = 3
stretch_mode = 5
metadata/_tab_index = 3

[node name="ex Rare" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("13_mulxs")
expand_mode = 3
stretch_mode = 5
metadata/_tab_index = 4

[node name="Secret Rare" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("14_nckev")
expand_mode = 3
stretch_mode = 5
metadata/_tab_index = 5

[node name="Ultra Rare" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("15_cb5gi")
expand_mode = 3
stretch_mode = 5
metadata/_tab_index = 6

[node name="Promo" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Rarity"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("16_k2ny7")
expand_mode = 3
stretch_mode = 5
metadata/_tab_index = 7

[node name="Set" type="TabContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxEmpty_x7o3x")
current_tab = 0
tabs_visible = false
metadata/_edit_group_ = true

[node name="RS" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("17_hr2nq")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 0

[node name="SS" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("18_kkm5t")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 1

[node name="DR" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("19_nfhoa")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 2

[node name="MA" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("20_wi2ea")
expand_mode = 3
stretch_mode = 5
metadata/_tab_index = 3

[node name="HL" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("21_n8elh")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 4

[node name="RG" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("22_thy0j")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 5

[node name="TRR" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("23_ci2jk")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 6

[node name="DX" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("24_eapo5")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 7

[node name="EM" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("25_3k3o2")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 8

[node name="UF" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("26_cf4eo")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 9

[node name="DS" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("27_p87ll")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 10

[node name="LM" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("28_s1pco")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 11

[node name="HP" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("29_ol86j")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 12

[node name="CG" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("30_jtbkc")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 13

[node name="DF" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("31_14fch")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 14

[node name="PK" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("32_1p8mx")
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 15

[node name="POP1" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("33_fd1ra")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 16

[node name="POP2" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("34_woxsh")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 17

[node name="POP3" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("35_jhidd")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 18

[node name="POP4" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("36_ba51r")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 19

[node name="POP5" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("37_1amd7")
expand_mode = 2
stretch_mode = 5
metadata/_tab_index = 20

[node name="Empty" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/Other/PanelContainer2/OtherProperties/Set"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
expand_mode = 2
stretch_mode = 4
metadata/_tab_index = 21

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="readied" from="VBoxContainer/PanelContainer/VBoxContainer/Attacks/Attacks/MarginContainer/AttackScrollBox" to="." method="edit_attack_size"]
